# CIVILIZATION

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  FEATURE_ROADMAP.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  README_CLEANUP.md  build_and_run.bat  build_and_run_sdl3.bat  build_error.txt  cleanup_bloat.bat  index.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  lint.yml  performance.yml
CIVILIZATION/: .env  ROADMAP.md  setup.cfg
CIVILIZATION/.github/ISSUE_TEMPLATE/: ai_improvement.md  border_dispute.md  mod_submission.md
CIVILIZATION/analytics/balancing_tools/: parameter_tuning.py
CIVILIZATION/analytics/player_analytics/: difficulty_adjustment.py  engagement_metrics.py
CIVILIZATION/analytics/simulation_analysis/: trend_analysis.py
CIVILIZATION/analytics/system_visualization/: dependency_graph.py  system_health.py
CIVILIZATION/docs/architecture/: 05_ecs_pattern.md  06_networking.md  08_dynamic_borders.md  10_economic_system.md
CIVILIZATION/docs/changelog/: v0.2.0.md  v0.3.0.md
CIVILIZATION/docs/examples/: basic_mod.py  custom_ai.py  custom_civilization.py  custom_languages.md  event_creation.md  map_modding.md  scenario_script.py
CIVILIZATION/docs/experiments/: alternative_models.md
CIVILIZATION/docs/game_mechanics/: dynamic_borders.md  economic_system.md  event_system.md  governance_system.md  population_dynamics.md  technology_system.md
CIVILIZATION/experiments/: __init__.py
CIVILIZATION/game_layer/: __init__.py
CIVILIZATION/geo_simulation/: game.py  main.py
CIVILIZATION/modding/: mod_conflicts.py  mod_dependencies.py  mod_validator.py
CIVILIZATION/scripts/: export_assets.py  generate_docs.py  lint.py
analytics/: __init__.py
analytics/balancing_tools/: balance_reporter.py  equilibrium_finder.py  sensitivity_analysis.py
analytics/player_analytics/: learning_curves.py  player_strategies.py
analytics/simulation_analysis/: anomaly_detection.py  predictive_modeling.py
analytics/system_visualization/: feedback_loops.py  influence_map.py
assets/fonts/: README.txt
data/: earth_2048x1024.earth
docs/: BUILD.md  FEATURES.md  OPTIMIZATION.md  PERFORMANCE.md  codebase_task_proposals.md
docs/architecture/: 02_core_systems.md  03_data_flow.md  04_ui_architecture.md  07_modding.md  09_cultural_evolution.md
docs/changelog/: v0.1.0.md
docs/examples/: custom_component.py  custom_cultures.md
docs/experiments/: novel_mechanics.md  research_tools.md
docs/game_mechanics/: cultural_evolution.md  subunit_management.md
docs/simulation_engine/: abstract_systems.md  dependency_mapping.md  simulation_methodology.md
docs/tutorials/: ai_development.md  economic_system.md  performance_optimization.md
experiments/alternative_models/: agent_based.py  network_theory.py  system_dynamics.py
experiments/novel_mechanics/: alternate_realities.py  genetic_evolution.py
experiments/research_tools/: data_exporter.py  hypothesis_testing.py
game_layer/challenges/: economic_crisis.py  revolution_mode.py
game_layer/difficulty/: player_handicap.py
game_layer/game_rules/: custom_rules.py  rule_parser.py  rule_system.py  rule_validator.py
game_layer/scenarios/: custom_scenario.py  world_war.py
game_layer/victory_conditions/: conquest.py  cultural.py  custom_victory.py
geo_simulation/: game.py  main.py
geo_simulation/config/: advanced.json  default.json  development.py  doctrines.yaml  game_constants.py  production.py  settings.py  technology.yaml
geo_simulation/data/: initial_data.py
geo_simulation/graphics/: camera.py  renderer.py  sprites.py
geo_simulation/networking/: client.py
geo_simulation/requirements/: base.txt
geo_simulation/ui/: dialogs.py  ui_manager.py
geo_simulation/utils/: __init__.py  border_calculation.py  color_utils.py  conflict_resolution.py  cultural_similarity.py  decorators.py  demographic_calculations.py  economic_modeling.py  file_utils.py  geometric_operations.py  geometry.py  logger.py  math_utils.py  pathfinding.py  perf_monitor.py  random_utils.py  validators.py
include/: biomes.h  cell.h  climate.h  common.h  config.h  events.h  geography.h  politics.h  render.h  types.h  utils.h  world.h
include/core/: character.h  constitution.h  faction.h  game.h  governance_evolution.h  knowledge_system.h  market.h  npc_engine.h  profile.h  role.h  time_engine.h
include/display/: animation.h  camera.h  debug_overlay.h  draw_list.h  layer.h  theme.h
include/engine/: font.h  input.h  renderer.h  window.h
include/ui/: app_controller.h  button.h  cli.h  confirm_dialog.h  gui_engine.h  map_ui.h  mini_map.h  nuklear_ui.h  onboarding_engine.h  scene.h  sdl_app.h  sdl_map.h  sdl_ui.h  ui_common.h  window_mgr.h
include/utils/: cache.h  config.h  memory_pool.h  noise.h  paths.h  utils.h
modding/: hot_reload.py  mod_loader.py  mod_manager.py
modding/api/: game_api.py  simulation_api.py
modding/entry_points/: cultural_archetypes.py  tech_trees.py
modding/examples/: scenario_pack.py
scripts/: benchmark.py  build.py  cleanup_python.ps1  package.py  setup_dev_env.py  smoke_build.sh  verify_source_coverage.py
src/: main.c  utils.c
src/core/: character.c  constitution.c  faction.c  game.c  knowledge_system.c  main.c  market.c  npc_engine.c  profile.c  role.c  time_engine.c  world.c
src/display/: animation.c  camera.c  debug_overlay.c  draw_list.c  layer.c  theme.c
src/engine/: font.c  input.c  renderer.c  window.c
src/graphics/: render.c
src/systems/: biomes.c  climate.c  events.c  geography.c  politics.c
src/ui/: app_controller.c  app_controller.c.rej  button.c  cli.c  confirm_dialog.c  nuklear_impl.c  scene_manager.c  sdl3_main.c  ui_common.c  win32_app.c  window_mgr.c
src/utils/: cache.c  common.c  config.c  memory_pool.c  noise.c  paths.c  types.c  utils.c
tools/: generate_borders.py  generate_cities.py  generate_earth_map.py  generate_flags.py  generate_nations.py  generate_resources.py
(+693 files in other folders)
